[gd_scene load_steps=11 format=2]

[ext_resource path="res://ground_farm/img/ground_farm_00.png" type="Texture" id=1]
[ext_resource path="res://ground_farm/ground_farm.gd" type="Script" id=2]
[ext_resource path="res://ground_farm/img/ground_farm_dug_00.tres" type="Texture" id=3]
[ext_resource path="res://ground_farm/img/ground_farm_cool_down_00.tres" type="Texture" id=6]
[ext_resource path="res://ground_farm/img/ground_farm_cool_down_02.tres" type="Texture" id=7]
[ext_resource path="res://ground_farm/img/ground_farm_cool_down_01.tres" type="Texture" id=8]
[ext_resource path="res://ground_farm/img/ground_farm_cool_down_03.tres" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=2]
resource_local_to_scene = true
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 9 ) ],
"loop": false,
"name": "cool_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "dug",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 8 )

[sub_resource type="GDScript" id=4]
resource_name = "count_down_label"
script/source = "extends Label

func _process(delta):
	if get_node('%count_down_timer').time_left > 0:
		text = '%.2f'%get_node('%count_down_timer').time_left
	else:
#		text = '%.2f'%0
		text = ''
		
"

[node name="ground_farm" type="AnimatedSprite"]
frames = SubResource( 2 )
script = ExtResource( 2 )

[node name="player_area_mask" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="collision_shape_2d" type="CollisionShape2D" parent="player_area_mask"]
visible = false
shape = SubResource( 3 )

[node name="count_down_timer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="5_z_index" type="Node2D" parent="."]
z_index = 5

[node name="count_down_label" type="Label" parent="5_z_index"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -11.0
margin_top = -30.0
margin_right = 29.0
margin_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
text = "0.00"
autowrap = true
clip_text = true
script = SubResource( 4 )

[node name="each_frame_timer" type="Timer" parent="."]
unique_name_in_owner = true

[connection signal="area_entered" from="player_area_mask" to="." method="_on_player_area_mask_area_entered"]
[connection signal="area_exited" from="player_area_mask" to="." method="_on_player_area_mask_area_exited"]
[connection signal="input_event" from="player_area_mask" to="." method="_on_player_area_mask_input_event"]
[connection signal="mouse_entered" from="player_area_mask" to="." method="_on_player_area_mask_mouse_entered"]
[connection signal="mouse_exited" from="player_area_mask" to="." method="_on_player_area_mask_mouse_exited"]
